...
    "action.ok" : {
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "OK"
          }
        }
      }
    },
    "action.preview" : {
      "extractionState" : "extracted_with_value",
...
    "sidebar.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "sk-..." : {

...
